--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="songs">0 songs</string>
+    <string name="search">Search</string>
+    <string name="rock">Rock</string>
+    <string name="metal">Metal</string>
+    <string name="edm">EDM</string>
+    <string name="urban">Urban</string>
+    <string name="library">Your Library</string>
 </resources>
